Deleted install.rb files since they're not being used. Added support for RubyForge. Added stubs for READMEs.

--- a/README
+++ b/README
@@ -1,4 +1,24 @@
-PasswordGeneration
-==================
+= password_generation
 
-Description goes here
+password_generation .
+
+== Resources
+
+Wiki
+
+* http://wiki.pluginaweek.org/Password_generation
+
+Announcement
+
+* http://www.pluginaweek.org/
+
+Source
+
+* http://svn.pluginaweek.org/trunk/plugins/miscellaneous/password_generation
+
+Development
+
+* http://dev.pluginaweek.org/browser/trunk/plugins/miscellaneous/password_generation
+
+== Description
+
