--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,7 @@
 == master
 
+* Release gems via rake-gemcutter instead of rubyforge
+
 == 0.1.0 / 2009-04-18
 
 * Add :print_friendly option to skip ambiguous characters [Nate Kontny]
